search bar functioning

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			rel="stylesheet"
 			href="./public/styles.css"
 		/>
+        <script type="module" src="./src/script.js"></script>
 	</head>
 	<body>
 		<header>
@@ -29,21 +30,13 @@
 		</header>
 		<main>
 			<section id="cryptoList">
-				<!-- Cryptocurrency cards will be dynamically added here -->
-				<div class="cryptoCard" data-symbol="BTC">
-                    <img src="placeholder.png" alt="Coin Icon" class="coinIcon">
-                    <div class="cryptoName">Bitcoin</div>
-                    <div class="history hidden">
-                        <!-- History of the coin will be dynamically added here -->
-                    </div>
-                    <button class="saveBtn">Save this coin</button>
-                </div>
-				<!-- Add more cards for other cryptocurrencies -->
+			
+
 			</section>
 		</main>
 		<footer>
 			<p>&copy; 2024 Crypto Dashboard powered by CoinGecko. All rights reserved</p>
 		</footer>
-		<script src="script.js"></script>
+
 	</body>
 </html>
