loading, search, pagination, back home working

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 			</div>
 		</header>
 		<main>
+            <div id="pagination" class="pagination">
+                <span>Page:</span>
+                <span value="1" class="pageBtn" disabled>1</span>
+            <span value="2" class="pageBtn" disabled>2</span>
+            <span value="3" class="pageBtn" disabled>3</span>
+            </div>
 			<section id="cryptoList">
 			
 
